# MyProjects

AVR_BLIMP/: BLIMP.c  GroundStation.c  Video
Brazo_Inteligente/: BCD_WHEN_A01665010.vhd  BINARIO_A_BCD.vhd  BIN_7SEG.vhd  DIVISOR_CLOCK.vhd  MOTORES.vhd  PRUEBA_VGA.qpf  PRUEBA_VGA.vhd  RX.vhd  SERIAL.vhd  TX.vhd  VGA_RETO.vhd  Video  servo_controller.vhd  top_level.vhd
Brazo_Inteligente/RedNeuronalMejorada/: RedNeuronalMejorada.pde  biases_layer_1.txt  biases_layer_2.txt  biases_layer_3.txt  weights_layer_1.txt  weights_layer_2.txt  weights_layer_3.txt
Carrito_IOT/: Control_bluetooth.py  Database_manager.py  EnvioDatos_MQTT_SQL  Video
D&D_EstructuraDeDatos/: CMakeLists.txt  Dice.cpp  Dice.h  Graph.cpp  Graph.h  HashTable.cpp  HashTable.h  Inventory.cpp  Inventory.h  Monster.h  Node.cpp  Node.h  Player.cpp  Player.h  Powers.cpp  Powers.h  Video  linkedList.cpp  linkedList.h  main.cpp
EMBISAFE/: Video
EMBISAFE/Camara/: main.c  ov7670.c
EMBISAFE/STM32H755ZI-q/: FreeRTOSConfig.h  freertos.c  main.c  main.h  rc522.h
EMBISAFE/STM32H755ZI-q Disco/: main.c  main.h  stm32h7xx_hal_conf.h  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  stm32h7xx_it.h
EMBISAFE/STM32H755ZI-q Disco/Application/: Model.cpp  Model.hpp  ModelListener.hpp  Screen1Presenter.cpp  Screen1Presenter.hpp  Screen1View.cpp  Screen1View.hpp
EMBISAFE/STM32h533re/: main.c  vozAnalisis.c  vozAnalisis.h
ROS2_Python_Basics/custom_interfaces/: CMakeLists.txt  package.xml
ROS2_Python_Basics/wall_follower/: setup..py
ROS2_Python_Basics/wall_follower/launch/: main.lunch
(+4 files in other folders)
